# GlogGflagsTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  test_gflags.sh  test_glog.sh
include/: flags.h  helloworld.h
src/: flags.cpp  helloworld.cpp
